--- a/desafio-css/desafio-css/docs/getit.css
+++ b/desafio-css/desafio-css/docs/getit.css
@@ -29,7 +29,7 @@ body {
 
 /* Você pode usar o CSS comentado abaixo, se ajudar */
 /* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
-/* .btn {
+.btn {
   position: relative;
   display: block;
   padding: 10px 15px;
@@ -77,4 +77,22 @@ body {
   padding-top: 120%;
 
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
-} */
+}
+
+.logo {
+    height: 50px;
+    padding: 5px;
+}
+
+.subtitle{
+  padding: 10px;
+}
+
+.appbar {
+  background-color: #f7d736;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-shadow: 0 8px 3px rgba(0,0,0,0.12), 0 3px 2px rgba(0,0,0,0.24);
+}
+
