--- a/desafio-css/desafio-css/docs/getit.css
+++ b/desafio-css/desafio-css/docs/getit.css
@@ -96,3 +96,60 @@ body {
   box-shadow: 0 8px 3px rgba(0,0,0,0.12), 0 3px 2px rgba(0,0,0,0.24);
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-card {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: .5rem;
+  margin: 2rem;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  border-radius: 5px;
+  width: 30rem;
+}
+
+.form-card-title {
+  border-color: transparent;
+  font-size: large;
+  font-weight: bold;
+}
+
+.autoresize {
+  font-family: 'Roboto', sans-serif;
+  border-color: transparent;
+  padding-top: .5rem;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  flex-direction: column;
+  padding: .75rem;
+  margin: .75rem;
+  width: 12rem;
+  height: 7rem;
+  border-radius: 5px;
+  background-color: #ead3a7;
+}
+
+.card h3 {
+  font-size: large;
+  font-weight: bold;
+  font-family: 'Permanent Marker', cursive;
+}
+
+.card-content p {
+  display: flex;
+  font-family: 'Permanent Marker', cursive;
+  padding-top: 1rem;
+  justify-content: center;
+}
