Rotação e cores aleatórias

--- a/desafio-css/desafio-css/docs/getit.css
+++ b/desafio-css/desafio-css/docs/getit.css
@@ -80,7 +80,7 @@ body {
 }
 
 .logo {
-    height: 50px;
+    height: 3rem;
     padding: 5px;
 }
 
@@ -129,10 +129,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 2rem 2rem;
 }
 
 .card {
-  flex-direction: column;
   padding: .75rem;
   margin: .75rem;
   width: 12rem;
@@ -152,4 +152,68 @@ body {
   font-family: 'Permanent Marker', cursive;
   padding-top: 1rem;
   justify-content: center;
+}
+
+.card-color-1 {
+  background-color: #ead3a7;
+}
+
+.card-color-2 {
+  background-color: #9de0f5;
+}
+
+.card-color-3 {
+  background-color: #ef89ba;
+}
+
+.card-color-4 {
+  background-color: #fae890;
+}
+
+.card-color-5 {
+  background-color: #abe9c1;
+}
+
+.card-rotation-1 {
+  transform: rotate(2deg);
+}
+
+.card-rotation-2 {
+  transform: rotate(-2deg);
+}
+
+.card-rotation-3 {
+  transform: rotate(3deg);
+}
+
+.card-rotation-4 {
+  transform: rotate(-3deg);
+}
+
+.card-rotation-5 {
+  transform: rotate(4deg);
+}
+
+.card-rotation-6 {
+  transform: rotate(-4deg);
+}
+
+.card-rotation-7 {
+  transform: rotate(2deg);
+}
+
+.card-rotation-8 {
+  transform: rotate(-2deg);
+}
+
+.card-rotation-9 {
+  transform: rotate(3deg);
+}
+
+.card-rotation-10 {
+  transform: rotate(-3deg);
+}
+
+.card-rotation-11 {
+  transform: rotate(4deg);
 }
