--- a/desafio-css/desafio-css/docs/getit.css
+++ b/desafio-css/desafio-css/docs/getit.css
@@ -139,6 +139,7 @@ body {
   height: 7rem;
   border-radius: 5px;
   background-color: #ead3a7;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
 
 .card h3 {
@@ -147,11 +148,12 @@ body {
   font-family: 'Permanent Marker', cursive;
 }
 
-.card-content p {
+.card-content {
   display: flex;
   font-family: 'Permanent Marker', cursive;
-  padding-top: 1rem;
+  height: 90%;
   justify-content: center;
+  align-items: center;
 }
 
 .card-color-1 {
